Fix dynamic playlist by Last.fm similar songs creation takes a lot time

Fix buffering of similar artists.
Fix faulty reply handling

BUG: 301716
FIXED-IN: 2.7